# Zura-Transpiled

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  config.mk  ddump.txt  entrypoint.sh  example.s  installer.sh  main  main.asm  main.s  power.cpp  run_tests.py  sample  test  test.c  test.sh  test.zu  testyIsmJFDm.txt  testyeZNXaLj.txt  text.txt  todo.txt  valgrind-out.txt
.github/workflows/: cmake-single-platform.yml
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: docs.md
inc/: colorize.hpp  update.hpp
release/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sample/: SAMPLE.MD  SAMPLE.md
scripts/: update.py
src/: common.hpp  main.cpp  update.cpp
src/ast/: ast.cpp  ast.hpp  expr.hpp  stmt.hpp  types.hpp
src/ast/generation/: codeGen.cpp  codeGen.hpp
src/codegen/: builtin.cpp  dwarf.cpp  expr.cpp  gen.cpp  gen.hpp  gen_expr.cpp  gen_stmt.cpp  gen_type.cpp  genmap.cpp  helper.cpp  optimize.hpp  stringify.hpp
src/codegen/optimizer/: compiler.cpp  compiler.hpp  instr.hpp  optimize.cpp  optimize.hpp  stringify.hpp
src/generation/: body.cpp  func.cpp  gen.cpp  gen.hpp  header.cpp  type.cpp
src/helper/: color.hpp  flags.cpp  flags.hpp
src/helper/error/: error.cpp  error.hpp  lexerError.hpp  parserError.hpp
src/helper/math/: math.cpp  math.hpp
src/helper/term_color/: color.hpp
src/ir/: TEST.cpp  ir.hpp
src/lexer/: lexer.cpp  lexer.hpp  maps.cpp  maps.hpp
src/memory/: memory.cpp  memory.hpp
src/parser/: def.cpp  expr.cpp  helper.cpp  map.cpp  map.hpp  parser.cpp  parser.hpp  stmt.cpp  tmaps.cpp  type.cpp  types.cpp
src/server/: atFunctions.cpp  atFunctions.json  completion.cpp  document.cpp  documents.cpp  hover.cpp  logging.hpp  lsp.cpp  lsp.hpp
src/server/methods/: atFunctions.hpp  completions.cpp  deinit.cpp  hover.cpp  init.cpp
src/type/: detType.cpp  error.cpp  error.hpp  type.cpp  type.hpp
src/typeChecker/: expr.cpp  helper.cpp  map.cpp  stmt.cpp  symbolTable.cpp  type.cpp  type.hpp  typeMaps.hpp  visitor.cpp
src/visitor/: typeCheckVisit.cpp  visit.cpp  visit.hpp
zura_files/: helper.zu  main.zu  person.zu  sample.zu  struct.zu  test.zu
zura_files/Testing/: struct.zu
zura_files/Testing/std/: ArenaAllocator.zu
zura_files/lexer/: helper.zu  lexer.zu
zura_files/std/: asciiToString.zu  color.zu  math.zu  readfile.zu  stringUtils.zu  type.zu  vector.zu  x11gui.zu
zura_files/vector-cpp/: main.cpp  test_vector  vector.hpp
